# Mira

./: .gitmodules  LICENSE  README.md  mira_env
compiler/include/polygeist/Passes/: Passes.h  Passes.td
compiler/lib/polygeist/: Ops.cpp
compiler/patches/: profile.patch  trunc_cautious.patch
compiler/script/: build_profile_info.py  parse_profiling.py
compiler/tools/: CMakeLists.txt
compiler/tools/cgeist/: .gitignore  changes.md  driver.cc
compiler/tools/disagg/: .gitignore  CMakeLists.txt  README.md  cloc_target
compiler/tools/disagg/ML-driver/: CMakeLists.txt  mldriver.cpp
compiler/tools/disagg/include/Dialect/: CMakeLists.txt  FunctionUtils.h  RemoteMem.h  RemoteMemAttrDefs.td  RemoteMemBase.td  RemoteMemOps.td  RemoteMemTypes.h  RemoteMemTypes.td  WorkloadAnalysis.h
compiler/tools/disagg/include/Dialect/ROps/: RAffineOps.td  RLLVMOps.td  RMemRefOps.td  RVectorOps.td
compiler/tools/disagg/include/Dialect/Transforms/: AffineCommon.h  CMakeLists.txt  Passes.h  Passes.td
compiler/tools/disagg/lib/Conversion/: AffineDisaggPatterns.cpp  ArithDisaggPatterns.cpp  CMakeLists.txt  FuncDisaggPatterns.cpp  LLVMDisaggPatterns.cpp  MemDisagg.cpp  MemRefDisaggPatterns.cpp  SCFDisaggPatterns.cpp  TrivialDisaggPatterns.cpp  VectorDisaggPatterns.cpp
compiler/tools/disagg/lib/Conversion/Common/: CMakeLists.txt  ConversionTarget.cpp  PatternBase.cpp  TypeConverter.cpp
compiler/tools/disagg/lib/Dialect/: CMakeLists.txt  FunctionUtils.cpp  RemoteMemDialect.cpp  RemoteMemTypes.cpp  TypeDetail.h  WorkloadAnalysis.cpp
compiler/tools/disagg/lib/Dialect/Transforms/: AffineAccessMem.cpp  AffineCommon.cpp  AffineNormalCache.cpp  AffineRingCache.cpp  CMakeLists.txt  DeterminePoolSource.cpp  InstrBandwidth.cpp  LoopFusion.cpp  LoopNormalCache.cpp  LoopRingCache.cpp  MemPooling.cpp  PrefetchForloop.cpp  PropRemote.cpp  ScfParallelSep.cpp  SearchRemote.cpp
compiler/tools/disagg/lib/Lowering/: CMakeLists.txt  EmitLLVM.cpp
compiler/tools/disagg/lib/Lowering/AffineRemote/: AffineRemote.cpp  CMakeLists.txt
compiler/tools/disagg/lib/Lowering/Common/: CMakeLists.txt  PatternBase.cpp  RMemRefBuilder.cpp  RMemRefDescIndex.h  RMemTypeLowerer.cpp
compiler/tools/disagg/lib/Lowering/FuncRemote/: CMakeLists.txt  FuncRemote.cpp
compiler/tools/disagg/lib/Lowering/MemRefRemote/: AllocLikeConversion.cpp  CMakeLists.txt  MemRefRemote.cpp
compiler/tools/disagg/lib/Lowering/RemoteMemToLLVM/: CMakeLists.txt  RemoteMemToLLVM.cpp
compiler/tools/disagg/lib/Lowering/SCFRemote/: CMakeLists.txt  SCFRemote.cpp
compiler/tools/disagg/lib/Lowering/Trivial/: ArithRemote.cpp  CMakeLists.txt
compiler/tools/disagg/pldisagg/: CMakeLists.txt  driver.cpp
runtime/: .clang-format  .gitignore  CMakeLists.txt  README.md
runtime/apps/: CMakeLists.txt
runtime/apps/bench-ML/: CMakeLists.txt  with-mlir.c
runtime/apps/bench-dataframe/: CMakeLists.txt  all_data.ref  data_setup.sh  order  yellow_tripdata_2016-01.ref
runtime/apps/bench-dataframe/app/: dummy_copy.txt  internal.cc  main.cc  main_plain.cc  main_step1.cc  main_step1_nc.cc  main_step1_ofld.cc  main_step2.cc  main_step2_nc.cc  main_step2_ofld.cc  main_step3.cc  main_step3_nc.cc  main_step3_ofld.cc  main_step4.cc  main_step4_nc.cc  main_step4_ofld.cc  main_step5.cc  main_step5_nc.cc  main_step5_ofld.cc  main_step6.cc  main_step7.cc  main_step7_nc.cc  main_step7_ofld.cc  main_stepall.cc  main_stepall_ofld.cc  main_visit.cc  offloads.cc  step6_generator.cc
runtime/apps/bench-dataframe/include/: internal.h
runtime/apps/bench-dataframe/include/DataFrame/: DataFrame.h
runtime/apps/bench-dataframe/linker/: base.ll  lk.sh  main_step1
runtime/apps/bench-dataframe/new_app/: all_step.cc  internal.cc  internal_ref.cc  step1.cc  step1_remote.cc  step2.cc  step2_remote.cc  step3.cc  step3_remote.cc  step4.cc  step4_remote.cc  step5.cc  step5_remote.cc  step7.cc  step7_remote.cc
runtime/apps/bench-gemm/: CMakeLists.txt  gemm-ring-cache.c  gemm-ring-direct.c  gemm-ring-test.c  gemm-with-mlir.c  generator.py  ref.c
runtime/apps/bench-gpt2/: CMakeLists.txt  local_main.cpp  remote_main.cpp
runtime/apps/bench-gpt2/model_onnx/: gpt2.affine.mlir
runtime/apps/bench-interleave/: CMakeLists.txt  def.h  local.cc  remote.cc  visit_local.c  visit_remote.c  workload.hpp
runtime/apps/bench-mt/: CMakeLists.txt  mt-mlir.cc  mt_dummy.mlir  mt_gen.py  ref.cc
runtime/apps/examples/: CMakeLists.txt  cache_array.c
runtime/apps/lat/: CMakeLists.txt  lat_app.h  local.c  remote.c
runtime/apps/tests/: CMakeLists.txt  ring_cache_ary.c  ring_cache_ary_ref.c  ring_cache_rt.c
runtime/configs/: cache.cfg
runtime/libcommon/: CMakeLists.txt
runtime/libcommon/include/: app.h  cache.h  clock.hpp  common.h  cycles.h  helper.h  memref.hpp  offload.h  packet.h  patterns.hpp  remote_pool.h  side_channel.h  tensor.h  vec.hpp
runtime/libcommon/lib/: CMakeLists.txt  cache.c  common.c  common_shm.c  memref.cpp  remote_pool.c  side_channel.c
runtime/libcommon/lib/apps/: shm_executor.c
runtime/libcommon/lib/include/: cache_internal.h  cache_policy.h
runtime/libcommon2/: CMakeLists.txt
runtime/libcommon2/include/: cache.hpp  cache_token.hpp  common.h  pqueue.hpp  queue.h  rdmaop.hpp  rring.h  rring_cache.h  rring_direct.h  rvector.h  tensor.h  tlb.hpp  util.hpp
runtime/libcommon2/include/tsl/: unordered_dense.h
runtime/libcommon2/include_old/: cache.h  common.h  greeting.h  pattern_generator.hpp  stats.h  tensor.h
runtime/libcommon2/lib/: CMakeLists.txt  cache.cc  common.c  common_init.c  net.c  rdmaop.cc
runtime/libcommon2/lib/apps/: remote_server.c
runtime/libcommon2/lib_old/: CMakeLists.txt  cache.c  common.c  common_tcp.c  offload.c  offloads.c  packet.c  rdmaop.cc  transport_local.c  transport_rdma.c
runtime/libcommon2/lib_old/apps/: remote_server.c
runtime/libcommon2/lib_old/apps/fromMLIR/: assem.c  foo.c
runtime/libcommon2/lib_old/apps/offload/: sum.cpp
runtime/libcommon2/lib_old/include/: channel_internal.h  exchanger.h  local_mr.h  queues.h  ringbuf.h  stack_like.h  stats_internal.h
runtime/tests/: cycles_test.c  patterns_test.cpp
(+277 files in other folders)
